padding adjusted on sections to avoid overlap with the navmenu when navigating via links

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,10 +16,21 @@ h1 {
   font-size: var(--font-size-h1);
   color: var(--color-text);
 }
+h3 {
+  font-size: var(--font-size-h3);
+  color: var(--color-text);
+}
 main section {
   width: 40rem;
   max-width: 100%;
   height: 85dvh;
+}
+#home,
+#projects,
+#skills {
+  /* PARA QUE EL NAVMENU NO SE SOBREPONGA AL CONTENIDO AL NAVEGAR MEDIANTE LOS LINKS DEL NAV */
+  padding-top: 80px; /* Igual a la altura del nav */
+  margin-top: -80px; /* Compensa el padding */
 }
 .home p {
   font-size: var(--font-size-body);
